--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ jobs:
   build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: pre-commit-checks
+    needs: fmt-and-test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
