--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Docker Multi-Arch Build and Push
+name: CI/CD
 
 permissions:
   contents: read
@@ -8,10 +8,10 @@ on:
   push:
     branches:
       - main
-      - '**'
 
 jobs:
   fmt-and-test:
+    name: Unit Tests
     runs-on: ubuntu-latest
 
     steps:
