--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,5 +8,7 @@ services:
       - "9090:8080"
     volumes:
       - ./config.json:/app/config.json:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - MCP_PROXY_CONFIG=/app/config.json
+    privileged: true
