Enhance Docker and Compose for DinD support (#7)
This PR implements issue #6 by enhancing docker-compose.yml and docker-compose-dev.yml for Docker-in-Docker (DinD) support, adding a DinD sidecar example, updating documentation with security and usage instructions, and updating the README docker run command.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,5 +8,9 @@ services:
       - "9090:8080"
     volumes:
       - ./config.json:/app/config.json:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
+      - GIN_MODE=debug
       - MCP_PROXY_CONFIG=/app/config.json
+    user: "${UID}:${GID}"
+    privileged: true
