--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,8 @@ services:
       - "8080:8080"
     volumes:
       - ./config.json:/app/config.json:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - MCP_PROXY_CONFIG=/app/config.json
+    user: "${UID}:${GID}"
+    privileged: true
