Refactor: Separate proxy core logic, fix mode precedence

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -12,5 +12,6 @@ services:
     environment:
       - GIN_MODE=debug
       - MCP_PROXY_CONFIG=/app/config.json
+      - MCP_PROXY_MODE=http
     user: "${UID}:${GID}"
     privileged: true
