--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,18 @@
         "MCP_PROXY_MODE": "command"
       },
       "console": "integratedTerminal"
+    },
+    {
+      "name": "Launch Proxy (STDIO Mode)",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/cmd/proxy/main.go",
+      "args": [
+        "--mode=stdio",
+        "--config=${workspaceFolder}/configs/example-config.json"
+      ],
+      "console": "integratedTerminal"
     }
   ]
 }
