Feat: Add Command (STDIO) Mode and Refactor Core Logic (Fixes #8) (#9)
This PR implements GitHub issue #8, adding support for running the
smart-mcp-proxy in a command (STDIO) mode using JSON-RPC 2.0, in
addition to the existing HTTP mode.

Key changes:
- Added `--mode` flag and `MCP_PROXY_MODE` env var to select mode.
- Implemented command mode handling in `cmd/proxy/command_mode.go`
adhering to JSON-RPC 2.0 spec.
- Refactored core request handling logic into `ProxyServer` methods in
`cmd/proxy/proxy.go`.
- Updated HTTP mode (`cmd/proxy/http_mode.go`) to use the refactored
core logic.
- Aligned error handling and response structures (e.g.,
`CallToolResult`) between modes.
- Updated `docker/Dockerfile` to default to command mode, allowing
override.
- Added VS Code launch configuration for STDIO mode.
- Enhanced HTTP tests (`cmd/proxy/main_test.go`) for parity with command
mode tests.
- Updated documentation (`README.md`, `docs/usage.md`,
`docs/configuration.md`).

Fixes #8

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,7 +18,7 @@ COPY . .
 
 # Build the Go binary for the target platform with correct name
 RUN --mount=type=cache,target=/root/.cache/go-build \
-    CGO_ENABLED=0 GOOS=linux GOARCH=$(dpkg --print-architecture) go build -o /smart-mcp-proxy ./cmd/proxy/main.go
+    CGO_ENABLED=0 GOOS=linux GOARCH=$(dpkg --print-architecture) go build -o /smart-mcp-proxy ./cmd/proxy
 
 # Final stage
 FROM --platform=$TARGETPLATFORM debian:bookworm-slim
@@ -61,11 +61,10 @@ WORKDIR /app
 # Switch to non-root user
 USER proxyuser
 
-# Expose port 8080
-EXPOSE 8080
-
-# Set the web server in release mode
+# Set the web server in release mode (relevant for HTTP mode)
 ENV GIN_MODE=release
 
-# Default command to run the Go binary
-CMD ["/usr/local/bin/smart-mcp-proxy"]
+# Default entrypoint to run the Go binary in stdio mode.
+# Allows overriding the mode via command-line arguments (e.g., --mode=http)
+# or the MCP_PROXY_MODE environment variable.
+ENTRYPOINT ["/usr/local/bin/smart-mcp-proxy", "--mode=stdio"]
